@@ -64,4 +64,10 @@ typedef struct {
 #define PGDIR_SIZE	(1UL << PGDIR_SHIFT)
 #define PGDIR_MASK	(~(PGDIR_SHIFT - 1))
 
+/* See Documentation/x86/x86_64/mm.txt for a description of the memory map. */
+#define MAXMEM		 _AC(__AC(1, UL) << MAX_PHYSMEM_BITS, UL)
+#define VMALLOC_START    _AC(0xffffc90000000000, UL)
+#define VMALLOC_END      _AC(0xffffe8ffffffffff, UL)
+#define VMEMMAP_START	 _AC(0xffffea0000000000, UL)
+
 #endif /* _ASM_X86_PGTABLE_32_TYPES_H_ */
